--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -72,14 +72,17 @@
                                 おすすめ目的地を追加
                             </summary>
                             <hr class="my-2 scale-x-150"/>
-                            <!-- おすすめ目的地のリストがあるか -->
-                            <p th:if="${#lists.isEmpty(recommendList)}" id="recommendListDiv"
-                               class="sm:text-lg text-base text-danger my-4">先に出発地点、終了地点、目的のどれかを入力してください。</p>
+                            <!-- おすすめ目的地のリストがない時 -->
+                            <p th:if="${#lists.isEmpty(recommendList)}" id="recommendListDiv" class="sm:text-lg text-base text-danger my-4">
+                                先に出発地点、終了地点、目的のどれかを入力してください。
+                            </p>
                             <div class="hidden items-center" id="loadingDiv">
                                 <span class="mx-2 text-lg">おすすめ目的地を検索中</span>
                                 <th:block th:replace="~{fragment/svg :: loading}"/>
                             </div>
-                            <div id="recommendToggleDiv"></div>
+                            <div id="recommendToggleDiv">
+                                <th:block th:if="${!#lists.isEmpty(recommendList)}" th:insert="~{fragment/recommend :: recommendToggle(__${recommendList}__)}"/>
+                            </div>
                         </details>
                     </section>
                     <section class="pt-10">
@@ -161,7 +164,9 @@
                 <th:block th:replace="~{fragment/update-modal :: placesUpdateToggle(${placeStatus.index}, ${updatePlaceForm}, ${isCreateRoute})}"/>
             </div>
         </div>
-        <div id="recommendFormDiv"></div>
+        <div id="recommendFormDiv">
+            <th:block th:if="${!#lists.isEmpty(recommendList)}" th:insert="~{fragment/recommend :: recommendForm(${recommendList})}"/>
+        </div>
     </div>
 </main>
 <th:block th:replace="~{fragment/footer :: footer}"/>
