【WIP】plan/editで使うButtonのJS作成

--- a/src/main/resources/templates/fragment/script.html
+++ b/src/main/resources/templates/fragment/script.html
@@ -95,5 +95,10 @@
         });
     </script>
 </th:block>
+
+<th:block th:fragment="planEdit">
+    <script src="/js/editForm.js"></script>
+    <script src="/js/editButtons.js"></script>
+</th:block>
 </body>
 </html>
