[style,fix] スマホ用のデザイン修正
- 文字サイズが小さかったため修正

--- a/src/main/resources/templates/mail/complete.html
+++ b/src/main/resources/templates/mail/complete.html
@@ -4,10 +4,10 @@
 <body class="flex flex-col min-h-screen bg-gray-50">
 <th:block th:replace="~{fragment/header :: header}"/>
 <main class="flex flex-col items-center mt-10 flex-grow">
-    <h2 class="text-center sm:text-3xl text-lg font-medium text-default w-3/4">
+    <h2 class="text-center sm:text-3xl text-xl font-medium text-default w-3/4">
         メール認証完了
     </h2>
-    <div class="my-16 text-center sm:text-xl text-sm w-3/4">
+    <div class="my-16 text-center sm:text-xl text-base w-3/4">
         <p class="my-2">メールが正常に認証されました。</p>
         <p class="my-2">ログインページに戻ります。</p>
     </div>
